# goit-algo-hw-04

./: .gitignore  pyproject.toml  readme.md
src/: task1.py  task2.py  task3.py
src/sorts/: bubble_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  shell_sort.py
